# glfw_template

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
include/: LoadShaders.h  vgl.h
lib/: LoadShaders.cpp  vgl.cpp
